2022-07-28 (2.16.1)
- Added trim function to handle invalid characters

2022-07-26 (2.16.0)
- Added versioning env variable based on current branch
  - It will update automatically the lambda environment variables:  VERSION and DD_VERSION 

2022-06-28 (2.15.0)
- Added flags to control npm verbosity
  - DEBUG=1 or TIMING=1 or NO_NPM_LOG=1
  - by default it uses no flags `npm install ${verbosity} ${timing} --production --legacy-peer-deps`
  - The command is print on the screen before launching it for troubleshooting


2022-03-30

- Updated environment variable to use CI instead of NODE_ENV to avoid reinstalling the devDeps in the pipeline.

2022-02-15 (2.14.6)

- Added argument `--filename` and `--executable` for mysqldump

2022-02-14 (2.14.5)

- Added argument `--options` for mysqldump
- Imporved CLI documentation

2022-02-10 (2.14.4)

- added `--use-default` to avoid breaking the MFA login

2022-02-10 (2.14.3)

- Added support to skip the AWS_PROFILE and use the local exported environment variables (mostly required when using MFA login)
- removed unnecessary console.log that pollute the screen...

2022-01-31 (2.14.1 & 2.14.2)

- Fixed very old bug thanks to m-a ! 
  - The zip files generated have the same checksum when nothing has changed
- Improved messages
- Added new arguments to override the zip filename
  - `--zip-filename-from-parent`
  - `--zip-filename="whatever.zip"`
  - Default: 'index.zip'

2022-01-27 (2.14.0)

- Added new command to initialize database with a user within an existing instance

2021-10-28 (PRELIM 2.13.x)

- Added new command --test-db-connection it tests the mysql connection for the primary and reference DB.

2021-10-27 (PRELIM 2.12.x)

- Added codepipeline actions, we are using cloudformation stacks to deploy our pipelines, we were looking for a quick way to let the developers update the branch deployed using those codepipeline. I've added 2 commands, --get-current-parameters and --update-branch-name.
- Restructure files and directories
